* changes v4.0.1 -> xxx:

##
## Features
##

- Removed option --gpu-temp-retain that tried to retain GPU temperature at X degrees celsius, please use driver specific tools
- Removed option --powertune-enable to enable power tuning, please use driver specific tools

##
## Algorithms
##

- Added hash-mode 16000 = Tripcode
- Added hash-mode 16100 = TACACS+

##
## Bugs
##

- Fixed a hash parsing problem when using --show/--left together with hashes with long salts that require pure kernels
- Fixed a hash parsing problem for 7-Zip hashes: allow a longer crc32 data length field within the hash format
- Fixed the output of --show if $HEX[] passwords are present within the potfile
- Fixed a restore issue leading to "Restore value is greater than keyspace" in case mask-files or wordlist-folders were used

##
## Improvements
##

- Show [r]esume in prompt in pause mode only and show [p]ause in prompt in resume mode only
- Reset PID controller history data for GPU fan speed in case user resumes from a paused session

##
## Technical
##

- Documents: Added docs/limits.txt
- Files: Switched back to relative current working directory on windows to workaround problems with unicode characters
- Hash Parser: Changed the way large strings are handled/truncated within the event buffer if they are too large to fit
- Hash Parser: Fixed our use of strtok_r () calls
- Self Test: Skip self-test for mode 8900 user-configurable scrypt settings are incompatible to fixed settings in the self-test hash
- Self Test: Skip self-test for mode 15700 because settings are too high and create a too long startup time
- Terminal: Send clear line code to the same output stream as the next message following

* changes v4.0.0 -> v4.0.1:

##
## Improvements
##

- Changed the maximum length of the substring of a hash shown whenever the parser found a problem while parsing the hash

##
## Bugs
##

- Fixed a memory leak while parsing a wordlist