@@ -520,6 +520,7 @@ typedef enum user_options_defaults
   ADVICE_DISABLE           = false,
   ATTACK_MODE              = ATTACK_MODE_STRAIGHT,
   BENCHMARK                = false,
+  BENCHMARK_ALL            = false,
   BITMAP_MAX               = 24,
   BITMAP_MIN               = 16,
   DEBUG_MODE               = 0,
@@ -591,90 +592,91 @@ typedef enum user_options_map
   IDX_ADVICE_DISABLE           = 0xff00,
   IDX_ATTACK_MODE              = 'a',
   IDX_BENCHMARK                = 'b',
-  IDX_BITMAP_MAX               = 0xff01,
-  IDX_BITMAP_MIN               = 0xff02,
-  IDX_CPU_AFFINITY             = 0xff03,
+  IDX_BENCHMARK_ALL            = 0xff01,
+  IDX_BITMAP_MAX               = 0xff02,
+  IDX_BITMAP_MIN               = 0xff03,
+  IDX_CPU_AFFINITY             = 0xff04,
   IDX_CUSTOM_CHARSET_1         = '1',
   IDX_CUSTOM_CHARSET_2         = '2',
   IDX_CUSTOM_CHARSET_3         = '3',
   IDX_CUSTOM_CHARSET_4         = '4',
-  IDX_DEBUG_FILE               = 0xff04,
-  IDX_DEBUG_MODE               = 0xff05,
-  IDX_ENCODING_FROM            = 0xff06,
-  IDX_ENCODING_TO              = 0xff07,
-  IDX_EXAMPLE_HASHES           = 0xff08,
-  IDX_FORCE                    = 0xff09,
-  IDX_GPU_TEMP_ABORT           = 0xff0a,
-  IDX_GPU_TEMP_DISABLE         = 0xff0b,
+  IDX_DEBUG_FILE               = 0xff05,
+  IDX_DEBUG_MODE               = 0xff06,
+  IDX_ENCODING_FROM            = 0xff07,
+  IDX_ENCODING_TO              = 0xff08,
+  IDX_EXAMPLE_HASHES           = 0xff09,
+  IDX_FORCE                    = 0xff0a,
+  IDX_GPU_TEMP_ABORT           = 0xff0b,
+  IDX_GPU_TEMP_DISABLE         = 0xff0c,
   IDX_HASH_MODE                = 'm',
-  IDX_HCCAPX_MESSAGE_PAIR      = 0xff0c,
+  IDX_HCCAPX_MESSAGE_PAIR      = 0xff0d,
   IDX_HELP                     = 'h',
-  IDX_HEX_CHARSET              = 0xff0d,
-  IDX_HEX_SALT                 = 0xff0e,
-  IDX_HEX_WORDLIST             = 0xff0f,
+  IDX_HEX_CHARSET              = 0xff0e,
+  IDX_HEX_SALT                 = 0xff0f,
+  IDX_HEX_WORDLIST             = 0xff10,
   IDX_INCREMENT                = 'i',
-  IDX_INCREMENT_MAX            = 0xff10,
-  IDX_INCREMENT_MIN            = 0xff11,
-  IDX_INDUCTION_DIR            = 0xff12,
-  IDX_KEEP_GUESSING            = 0xff13,
+  IDX_INCREMENT_MAX            = 0xff11,
+  IDX_INCREMENT_MIN            = 0xff12,
+  IDX_INDUCTION_DIR            = 0xff13,
+  IDX_KEEP_GUESSING            = 0xff14,
   IDX_KERNEL_ACCEL             = 'n',
   IDX_KERNEL_LOOPS             = 'u',
-  IDX_KEYSPACE                 = 0xff14,
-  IDX_LEFT                     = 0xff15,
+  IDX_KEYSPACE                 = 0xff15,
+  IDX_LEFT                     = 0xff16,
   IDX_LIMIT                    = 'l',
-  IDX_LOGFILE_DISABLE          = 0xff16,
-  IDX_LOOPBACK                 = 0xff17,
-  IDX_MACHINE_READABLE         = 0xff18,
-  IDX_MARKOV_CLASSIC           = 0xff19,
-  IDX_MARKOV_DISABLE           = 0xff1a,
-  IDX_MARKOV_HCSTAT            = 0xff1b,
+  IDX_LOGFILE_DISABLE          = 0xff17,
+  IDX_LOOPBACK                 = 0xff18,
+  IDX_MACHINE_READABLE         = 0xff19,
+  IDX_MARKOV_CLASSIC           = 0xff1a,
+  IDX_MARKOV_DISABLE           = 0xff1b,
+  IDX_MARKOV_HCSTAT            = 0xff1c,
   IDX_MARKOV_THRESHOLD         = 't',
-  IDX_NONCE_ERROR_CORRECTIONS  = 0xff1c,
-  IDX_NVIDIA_SPIN_DAMP         = 0xff1d,
+  IDX_NONCE_ERROR_CORRECTIONS  = 0xff1d,
+  IDX_NVIDIA_SPIN_DAMP         = 0xff1e,
   IDX_OPENCL_DEVICES           = 'd',
   IDX_OPENCL_DEVICE_TYPES      = 'D',
   IDX_OPENCL_INFO              = 'I',
-  IDX_OPENCL_PLATFORMS         = 0xff1e,
-  IDX_OPENCL_VECTOR_WIDTH      = 0xff1f,
+  IDX_OPENCL_PLATFORMS         = 0xff1f,
+  IDX_OPENCL_VECTOR_WIDTH      = 0xff20,
   IDX_OPTIMIZED_KERNEL_ENABLE  = 'O',
-  IDX_OUTFILE_AUTOHEX_DISABLE  = 0xff20,
-  IDX_OUTFILE_CHECK_DIR        = 0xff21,
-  IDX_OUTFILE_CHECK_TIMER      = 0xff22,
-  IDX_OUTFILE_FORMAT           = 0xff23,
+  IDX_OUTFILE_AUTOHEX_DISABLE  = 0xff21,
+  IDX_OUTFILE_CHECK_DIR        = 0xff22,
+  IDX_OUTFILE_CHECK_TIMER      = 0xff23,
+  IDX_OUTFILE_FORMAT           = 0xff24,
   IDX_OUTFILE                  = 'o',
-  IDX_WORDLIST_AUTOHEX_DISABLE = 0xff24,
-  IDX_POTFILE_DISABLE          = 0xff25,
-  IDX_POTFILE_PATH             = 0xff26,
-  IDX_QUIET                    = 0xff27,
-  IDX_REMOVE                   = 0xff28,
-  IDX_REMOVE_TIMER             = 0xff29,
-  IDX_RESTORE                  = 0xff2a,
-  IDX_RESTORE_DISABLE          = 0xff2b,
-  IDX_RESTORE_FILE_PATH        = 0xff2c,
+  IDX_WORDLIST_AUTOHEX_DISABLE = 0xff25,
+  IDX_POTFILE_DISABLE          = 0xff26,
+  IDX_POTFILE_PATH             = 0xff27,
+  IDX_QUIET                    = 0xff28,
+  IDX_REMOVE                   = 0xff29,
+  IDX_REMOVE_TIMER             = 0xff2a,
+  IDX_RESTORE                  = 0xff2b,
+  IDX_RESTORE_DISABLE          = 0xff2c,
+  IDX_RESTORE_FILE_PATH        = 0xff2d,
   IDX_RP_FILE                  = 'r',
-  IDX_RP_GEN_FUNC_MAX          = 0xff2d,
-  IDX_RP_GEN_FUNC_MIN          = 0xff2e,
+  IDX_RP_GEN_FUNC_MAX          = 0xff2e,
+  IDX_RP_GEN_FUNC_MIN          = 0xff2f,
   IDX_RP_GEN                   = 'g',
-  IDX_RP_GEN_SEED              = 0xff2f,
+  IDX_RP_GEN_SEED              = 0xff30,
   IDX_RULE_BUF_L               = 'j',
   IDX_RULE_BUF_R               = 'k',
-  IDX_RUNTIME                  = 0xff30,
-  IDX_SCRYPT_TMTO              = 0xff31,
-  IDX_SELF_TEST_DISABLE        = 0xff32,
+  IDX_RUNTIME                  = 0xff31,
+  IDX_SCRYPT_TMTO              = 0xff32,
+  IDX_SELF_TEST_DISABLE        = 0xff33,
   IDX_SEGMENT_SIZE             = 'c',
   IDX_SEPARATOR                = 'p',
-  IDX_SESSION                  = 0xff33,
-  IDX_SHOW                     = 0xff34,
+  IDX_SESSION                  = 0xff34,
+  IDX_SHOW                     = 0xff35,
   IDX_SKIP                     = 's',
-  IDX_STATUS                   = 0xff35,
-  IDX_STATUS_TIMER             = 0xff36,
-  IDX_STDOUT_FLAG              = 0xff37,
-  IDX_SPEED_ONLY               = 0xff38,
-  IDX_PROGRESS_ONLY            = 0xff39,
-  IDX_TRUECRYPT_KEYFILES       = 0xff3a,
-  IDX_USERNAME                 = 0xff3b,
-  IDX_VERACRYPT_KEYFILES       = 0xff3c,
-  IDX_VERACRYPT_PIM            = 0xff3d,
+  IDX_STATUS                   = 0xff36,
+  IDX_STATUS_TIMER             = 0xff37,
+  IDX_STDOUT_FLAG              = 0xff38,
+  IDX_SPEED_ONLY               = 0xff39,
+  IDX_PROGRESS_ONLY            = 0xff3a,
+  IDX_TRUECRYPT_KEYFILES       = 0xff3b,
+  IDX_USERNAME                 = 0xff3c,
+  IDX_VERACRYPT_KEYFILES       = 0xff3d,
+  IDX_VERACRYPT_PIM            = 0xff3e,
   IDX_VERSION_LOWER            = 'v',
   IDX_VERSION                  = 'V',
   IDX_WORKLOAD_PROFILE         = 'w'
@@ -1487,6 +1489,7 @@ typedef struct user_options
 
   bool         advice_disable;
   bool         benchmark;
+  bool         benchmark_all;
   bool         example_hashes;
   bool         force;
   bool         gpu_temp_disable;
