@@ -4,168 +4,72 @@
  */
 
 #include "common.h"
+#include "types.h"
+#include "interface.h"
 #include "benchmark.h"
-
-const unsigned int DEFAULT_BENCHMARK_ALGORITHMS_CNT = 158;
 
 const unsigned int DEFAULT_BENCHMARK_ALGORITHMS_BUF[] =
 {
-  900,
   0,
-  5100,
   100,
   1400,
-  10800,
   1700,
-  5000,
-  10100,
-  14900,
-  6000,
-  6100,
-  6900,
-  11700,
-  11800,
-  14000,
-  14100,
-  400,
-  8900,
-  11900,
-  12000,
-  10900,
-  12100,
-  23,
   2500,
-  2501,
-  5300,
-  5400,
+  1000,
+  3000,
   5500,
   5600,
-  7300,
-  7500,
-  13100,
-  16100,
-  8300,
-  11100,
-  11200,
-  11400,
-  121,
-  2611,
-  2711,
-  2811,
-  8400,
-  13900,
-  11,
-  2612,
-  7900,
-  21,
-  11000,
-  124,
-  10000,
-  16000,
-  3711,
-  4521,
-  4522,
-  12,
-  131,
-  132,
-  1731,
-  200,
-  300,
-  3100,
-  112,
-  12300,
-  8000,
-  141,
-  1441,
-  1600,
-  12600,
-  1421,
-  101,
-  111,
-  1411,
-  1711,
-  3000,
-  1000,
-  1100,
-  2100,
-  15300,
-  15900,
-  12800,
   1500,
-  12400,
   500,
   3200,
-  7400,
   1800,
-  122,
-  1722,
+  7500,
+  13100,
+  15300,
+  15900,
   7100,
-  6300,
-  6700,
-  6400,
-  6500,
-  2400,
-  2410,
-  5700,
-  9200,
-  9300,
-  22,
-  501,
-  5800,
-  8100,
-  8500,
-  7200,
-  9900,
-  7700,
-  7800,
-  10300,
-  8600,
-  8700,
-  9100,
-  133,
-  13500,
   11600,
-  13600,
   12500,
   13000,
-  13200,
-  13300,
   6211,
-  6221,
-  6231,
-  6241,
-  13711,
-  13721,
-  13731,
-  13741,
-  13751,
-  13761,
-  8800,
-  12900,
-  12200,
-  9700,
-  9710,
-  9800,
-  9810,
-  9400,
-  9500,
-  9600,
-  10400,
-  10410,
-  10500,
-  10600,
-  10700,
-  9000,
-  5200,
-  6800,
-  6600,
-  8200,
-  11300,
-  12700,
-  15200,
   13400,
-  15500,
-  15600,
-  125,
-  15400
+  6800,
+  11300,
+  -1,
 };
+
+int benchmark_next (hashcat_ctx_t *hashcat_ctx)
+{
+  const user_options_t *user_options = hashcat_ctx->user_options;
+
+  static int cur = 0;
+
+  if (user_options->benchmark_all == false)
+  {
+    const int hash_mode = DEFAULT_BENCHMARK_ALGORITHMS_BUF[cur];
+
+    if (hash_mode == -1) return -1;
+
+    cur++;
+
+    return hash_mode;
+  }
+  else
+  {
+    for (int i = cur; i < 99999; i++)
+    {
+      const char *name = strhashtype (i);
+
+      if (name)
+      {
+        const int hash_mode = i;
+
+        cur = hash_mode + 1;
+
+        return hash_mode;
+      }
+    }
+  }
+
+  return -1;
+}
